	* Extend the width of lists window
	* Fix problems with options' windows and some themes (like Noia)
	* Apply hometoast's patch for windows
	* Polish translation by Kacper86 <melki@interecho.com>
	* Portuguese translation by Antonio Manuel Dias <ammdias@gmail.com>
	* English corrections (by Chad)

2007-04-05  Achraf cherti
	* some warnings fixed in cgpg.js and cgmail.js.
	* size of dialogs fixed (password, options, etc.)
	* italian translation by Alessandro Pascali
	  (alessandro.pascali /at/ gmail |dot| com).

2007-04-04  Maximilien Cuony
	* export to kexport, for FF 1.5
	* remove and fore --no-agent
	* add some error messages
	* test options for old gpg relases
	* 0.3.1 Packed, and uploaded to the server !

2007-04-04  Achraf cherti
	* the password can be clean in onAccept() (password.js)
	* the .svn dirs is not included in the .xpi file (generated with build.sh)

2007-03-31  Maximilien Cuony
	* Apply mac's patch
	* Revert attachement signs verify
	* Fix option's bug if use the select path
	* Add gmail's draf support
	* Add option to turn off gpg's agent
	* Version 0.3 Packed, and uploaded to the server !

2007-03-20  Maximilien Cuony
	* Beginning of attachements's signs verify

2007-03-14  Maximilien Cuony
	* Export system
	* If user cancel an action (like ask for password or select a key), the action is now stopped, and no error message appear !

2007-03-12  Achraf cherti
	* file selector locale error fixed (firegpg-strings inserted 
	  into options.xul)

2007-03-12  Maximilien Cuony
	* Fixed Windows compatibility !
	* Gmail's new windows support !
	* Fixed popup menu's problem
	* Version 0.2.2 Packed, and uploaded to the server !

2007-03-11  Maximilien Cuony
	* Cslected more intelligent
	* Fix the problem with two messages 'Selectionnez une partie de votre mail'
	* Improve some performaces of cgmail
	* Changed text for the password's input
	* Support fire Gmail's plain text editing
	* Version 0.2 Packed, and uploaded to the server !